- translate to English

--- a/views/user/sign.ejs
+++ b/views/user/sign.ejs
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Node.js注册演示</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Sign in</title>
 </head>
+
 <body>
-<h1>注册</h1>
-<form id="signup" method="post" action="/users/do/sign">
-<label>   帐号：</label><input type="text" name="username" />
-<label>   Email：</label><input type="text" name="email" />
-<input type="submit" value="注册" /><br>
-</form>
+    <h1>Sign in</h1>
+    <form id="signup" method="post" action="/users/do/sign">
+        <label>   username：</label><input type="text" name="username" />
+        <label>   password：</label><input type="text" name="email" />
+        <input type="submit" value="signup" /><br>
+    </form>
 </body>
+
 </html>
