message send work

--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -15,18 +15,22 @@
     }
 </style>
 <body>
+
     <div class="leftside" id="chat">
-        <div id="contact"> No Contact </div>
+        <div id="dest" data-value=<%=text%>>  NO CONTACT </div>
 		<div id="chat-message"> </div>
 		<input id="message"/>
 		<button id="send">Send Messages</button>
 	</div>
+
+    
     <script src="/javascripts/chatroom.js"></script>
 
     <div class="rightside" id="contact">
         <div id="contact"> </div>
 
     </div>
+    
     
 </body>
 
