--- a/views/user/sign.ejs
+++ b/views/user/sign.ejs
@@ -7,7 +7,7 @@
 <body>
 <h1>注册</h1>
 <form id="signup" method="post" action="/users/do/sign">
-<label>   帐号：</label><input type="text" name="username" />
+<label>   帐号：</label><input type="text" name="username" id="input"/>
 <label>   Email：</label><input type="text" name="email" />
 <input type="submit" value="注册" /><br>
 </form>
