--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equivox="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="icon" href="/static/img/chat.ico" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="/static/css/chatroom.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/common/layui.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/common/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/common/fileinput.min.css">
 </head>
 <style>
     .leftside{
@@ -30,6 +35,115 @@
         <div id="contact"> </div>
 
     </div>
+    <div class="qqBox">
+        <div class="BoxHead">
+            <div class="headImg">
+                <img id="avatarUrl" src=""/>
+            </div>
+            <div id="username" class="internetName"></div>
+            <button class="close logout" onclick="logout()">&times;</button>
+        </div>
+        <div class="context">
+            <div class="conLeft">
+                <ul>
+                    
+                </ul>
+            </div>
+            <div class="conRight">
+                <div class="Righthead">
+                    <div class="headName"></div>
+                </div>
+                <div class="RightCont">
+                    <ul class="newsList-temp"></ul>
+                    <ul class="newsList">
+                    
+                    </ul>
+                </div>
+                <div class="RightFoot">
+                    <div class="emjon">
+                        <ul>
+                            <li><img src="/static/img/emoji/emoji_01.png"></li>
+                            <li><img src="/static/img/emoji/emoji_02.png"></li>
+                            <li><img src="/static/img/emoji/emoji_03.png"></li>
+                            <li><img src="/static/img/emoji/emoji_04.png"></li>
+                            <li><img src="/static/img/emoji/emoji_05.png"></li>
+                            <li><img src="/static/img/emoji/emoji_06.png"></li>
+                            <li><img src="/static/img/emoji/emoji_07.png"></li>
+                            <li><img src="/static/img/emoji/emoji_08.png"></li>
+                            <li><img src="/static/img/emoji/emoji_09.png"></li>
+                            <li><img src="/static/img/emoji/emoji_10.png"></li>
+                            <li><img src="/static/img/emoji/emoji_11.png"></li>
+                            <li><img src="/static/img/emoji/emoji_12.png"></li>
+                            <li><img src="/static/img/emoji/emoji_13.png"></li>
+                            <li><img src="/static/img/emoji/emoji_14.png"></li>
+                            <li><img src="/static/img/emoji/emoji_15.png"></li>
+                            <li><img src="/static/img/emoji/emoji_16.png"></li>
+                            <li><img src="/static/img/emoji/emoji_17.png"></li>
+                            <li><img src="/static/img/emoji/emoji_18.png"></li>
+                            <li><img src="/static/img/emoji/emoji_19.png"></li>
+                            <li><img src="/static/img/emoji/emoji_20.png"></li>
+                            <li><img src="/static/img/emoji/emoji_21.png"></li>
+                            <li><img src="/static/img/emoji/emoji_22.png"></li>
+                            <li><img src="/static/img/emoji/emoji_23.png"></li>
+                            <li><img src="/static/img/emoji/emoji_24.png"></li>
+                        </ul>
+                    </div>
+                    <div class="footTop">
+                        <ul>
+                            <li class="ExP">
+                                <img src="/static/img/emoji.jpg">
+                            </li>
+                            <li class="file-upload">
+                                <a data-toggle="modal" data-target="#upload-modal" data-backdrop="static">
+                                    <img  src="/static/img/upload.jpg">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="inputBox">
+                        <input id="toUserId" type="hidden">
+                        <input id="toGroupId" type="hidden">
+                        <textarea id="dope" style="width: 99%;height: 75px; border: none;outline: none;" name="" rows="" cols=""></textarea>
+                        <button title="Press Enter to Send" class="sendBtn">Send</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        <div class="modal fade" id="upload-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close" data-dismiss="modal">&times;</button>
+                        <h3 class="modal-title text-primary">Upload File</h3>
+                    </div>
+                    <div class="modal-body">
+                    <form class="form-horizontal">
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label">Select</label>
+                            <div class="col-sm-9">
+                                <input type="file" name="file"
+                                    class="col-sm-9 myfile" />
+                                <p class="help-block">Max Size : 30 Mb</p>
+                            </div>
+                        </div>
+                    </form>
+                    </div>
+                    <div class="modal-footer">
+                            <button id="upload-cancel" class="btn btn-sm btn-muted" data-dismiss="modal">
+                            <i class="glyphicon glyphicon-remove"></i> Cancel
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+    <script type="text/javascript" src="/static/js/common/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="/static/js/common/jquery.actual.min.js"></script>
+    <script type="text/javascript" src="/static/js/common/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/common/fileinput.min.js"></script>
+    <script type="text/javascript" src="/static/js/common/zh.js"></script>    
     
     
 </body>
