--- a/public/static/css/chatroom.css
+++ b/public/static/css/chatroom.css
@@ -18,7 +18,7 @@ body {
 .BoxHead{
     width: 100%;
     height: 52px;
-    background: url(../img/box_head.jpg) no-repeat;
+    background: url(/static/img/box_head.jpg) no-repeat;
     display: -webkit-box;
     -webkit-box-orient: horizontal;
 }
