--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="/static/css/common/fileinput.min.css">
     <script src="/javascripts/libsignal-protocol.js"></script>
     <script src="/javascripts/InMemorySignalProtocolStore.js"></script>
+    
 </head>
 <style>
     .leftside{
@@ -29,10 +30,8 @@
 		<input id="message"/>
 		<button id="send">Send Messages</button>
 	</div>
-    v
+    <script  src="/javascripts/bundle.js"></script>
     
-    <script src="/javascripts/chatroom.js"></script>
-
 
     <div class="rightside" id="contact">
         <div id="contact"> </div>
