--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -10,8 +10,6 @@
     <link rel="stylesheet" type="text/css" href="/static/css/common/layui.css">
     <link rel="stylesheet" type="text/css" href="/static/css/common/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="/static/css/common/fileinput.min.css">
-    <script src="/javascripts/libsignal-protocol.js"></script>
-    <script src="/javascripts/InMemorySignalProtocolStore.js"></script>
     
 </head>
 <style>
@@ -30,7 +28,7 @@
 		<input id="message"/>
 		<button id="send">Send Messages</button>
 	</div>
-    <script  src="/javascripts/bundle.js"></script>
+    <script  src="/javascripts/chatroom.js"></script>
     
 
     <div class="rightside" id="contact">
