--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -22,7 +22,7 @@
 
 <body>
 
-    <body style="background-image: url(/static/img/webchat.jpg); background-attachment:fixed; background-position:center; background-size:100% 100%; ">
+    <body style="background-image: url(/images/web.jpeg); background-attachment:fixed; background-position:center; background-size:100% 100%; ">
         <div class="container" style="height: 650px; margin-top: 50px; padding: 0px; background-color: #f5f5f5; ">
             <nav class="navbar navbar-inverse">
                 <div class="container-fluid">
@@ -55,9 +55,7 @@
                     <div class="alert alert-success" role="alert" style="margin-top: 15px; margin-bottom: -15px">Online Users</div>
                     <div id="room-list">
                         <ul class="list-group" style="margin-top: 15px">
-                            {% for user in users_online %} {% if user.username == username %} {% else %}
-                            <li class="list-group-item">
-                                <a href="{% url 'friendprofile' username user.username %}" class="list-group-item">{{ user.username }}</a>
+                            <li class="list-group-item" id="contact">
                             </li>
                         </ul>
                     </div>
@@ -67,15 +65,14 @@
                 <div class="col-xs-9 col-md-9 col-sm-9" style="margin-top: 15px; padding-right: 0px">
                     <div id="room" style="height: 450px">
                         <div class="panel panel-success">
-                            <div class="panel-heading">
-                                Chat
+                            <div class="panel-heading" data-value=<%=username%> id="dest"> NO CONTACT
                             </div>
                             <div id="chat-message" class="panel-body" style="height: 350px; padding: 0px; ">
                                 <!-- <textarea id="chat-log" style="height: 100%; width: 100%; border-color: #f5f5f5;">
                                     </textarea> -->
                             </div>
                             <div class="panel-footer" style="padding: 0px">
-                                <input id="chat-message-input" type="text" style="width: 100%; height: 120px; border: #f5f5f5; border-top-color: #dff0d8; " />
+                                <input id="message" type="text" style="width: 100%; height: 120px; border: #f5f5f5; border-top-color: #dff0d8; " />
                                 <div class="col-md-offset-11">
                                     <input id="chat-message-submit" class="btn btn-primary" type="button" value="Send" style="margin-top: 10px;margin-bottom: 10px; " />
                                 </div>
@@ -94,6 +91,7 @@
             </div>
         </div>
 
+        <script src="/javascripts/chatroom.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js" integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd" crossorigin="anonymous"></script>
     </body>
@@ -105,15 +103,15 @@
                     <div id="chat-message"> </div>
                     <input id="message" />
                     <button id="send">Send Messages</button>
-                </div>
+                    </div>
 
 
-                <script src="/javascripts/chatroom.js"></script>
+                    <script src="/javascripts/chatroom.js"></script>
 
-                <div class="rightside" id="contact">
-                    <div id="contact"> </div>
+                    <div class="rightside" id="contact">
+                        <div id="contact"> </div>
 
-                </div>
+                    </div>
 
 
 
