--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -91,8 +91,8 @@
                 <a href="https://github.com/ELEC-H417-Group/BxlContact" style="color: #e3e3e3;" target="_blank">ELEC-H417-ULB</a>
             </div>
         </div>
-        <script src="/javascripts/jquery.js" integrity="sha384-nvAa0+6Qg9clwYCGGPpDQLVpLNn0fRaROjHqs13t4Ggj3Ez50XnGQqc/r8MhnRDZ " crossorigin="anonymous "></script>
-        <script src="/javascripts/bootstrap.js " integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd " crossorigin="anonymous "></script>
+        <script src="/javascripts/jquery.js"></script>
+        <script src="/javascripts/bootstrap.js "></script>
         <script src="/javascripts/bundle.js "></script>
     </body>
 
