--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,8 +4,6 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
     <title>Welcome to BxlContact</title>
     <!-- Bootstrap core CSS -->
     <link href="/stylesheets/bootstrap.min.css" rel="stylesheet">
@@ -32,6 +30,7 @@
 
 </body>
 <script>
+    // challenge response auth implementation
     String.prototype.hashCode = function() {
         if (Array.prototype.reduce) {
             return this.split("").reduce(function(a, b) {
