- fix reload 404 bug - fix the user buttom don't exist bug

--- a/views/user/chatroom.ejs
+++ b/views/user/chatroom.ejs
@@ -55,7 +55,7 @@
                 <div class="col-xs-3 col-sm-3 col-md-3">
                     <div class="alert alert-success" role="alert" style="margin-top: 15px; margin-bottom: -15px">Online Users</div>
                     <div id="room-list">
-                        <ul class="list-group" style="margin-top: 15px">
+                        <ul class="list-group" style="margin-top: 15px" id='contactDad'>
                             <li class="list-group-item" id="contact">
                             </li>
                         </ul>
